# deep-learning-from-scratch

./: .gitmodules  Makefile  README.md  pyproject.toml
ml/: chapter_2.py  chapter_3.py
practice/: chapter_3.py  chapter_3_mnist.py  chapter_4.py
tests/: test_chapter_2.py  test_chapter_3.py  test_chapter_4.py
