[tool.poetry]
name = "machine-learning"
version = "0.1.0"
description = ""
authors = ["e7h4n <perfectworks@gmail.com>"]
readme = "README.md"
packages = [{ include = "ml" }]

[tool.poetry.dependencies]
python = "^3.10"
logzero = "^1.7.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
